Change smartcontract api to add in signature the contract address
